# OpenBridge

./: LICENSE  OpenBridge_server.py  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
docs/: README.md
src/OpenBridge/: __init__.py  __main__.py  config.py  prompts.py  server.py
src/OpenBridge/tools/: __init__.py  analysis.py  api.py  files.py
tests/: __init__.py  test_config.py  test_server.py  test_tools.py
